--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,33 @@ project/plugins/target
 
 .target
 
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+
 # Play
 
 RUNNING_PID
+
+
+bin/
+/db
+.eclipse
+/lib/
+/logs/
+/modules
+/project/project
+/project/target
+/target
+tmp/
+test-result
+server.pid
+*.eml
+/dist/
+.cache
