pass elastic search url through config files

--- a/conf/demo.properties
+++ b/conf/demo.properties
@@ -1,3 +1,5 @@
 #server_url=http://sedna.mpi-inf.mpg.de:9350
 server_url=http://localhost:9350
-autocomplete_url=http://localhost:9200
+autocomplete_url=http://localhost:9650
+
+#elasticsearch_url=http://sedna.mpi-inf.mpg.de:9350
