--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,6 +21,7 @@
 # ~~~~~
 # Play uses Akka internally and exposes Akka Streams and actors in Websockets and
 # other streaming HTTP responses.
+play.server.akka.requestTimeout = 75s
 akka {
   # "akka.log-config-on-start" is extraordinarly useful because it log the complete
   # configuration at INFO level, including defaults and overrides, so it s worth
